@@ -6,13 +6,17 @@ git-annex, you can have git on both the frontend and the backend.
 Here's how to create a bup remote, and describe it.
 
 	# git annex initremote mybup type=bup encryption=none remote=example.com/big/mybup
-	initremote bup (init) ok
+	initremote bup (bup init)
+	Initialized empty Git repository in /big/mybup/
+	ok
 	# git annex describe mybup "my bup repository at example.com"
 	describe mybup ok
 
 Now the remote can be used like any other remote.
 
 	# git annex move my_cool_big_file --to mybup
-	move my_cool_big_file (to mybup...) ok
+	move my_cool_big_file (to mybup...)
+	Receiving index from server: 1100/1100, done.
+	ok
 
 See [[special_remotes/bup]] for details.
